Fix lint problems.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,19 @@
 <resources>
     <string name="app_name">Baking Recipes</string>
-    <string name="title_step_detail">Step Detail</string>
 
     <!-- Image content description -->
-    <string name="content_desc_ic_basket">Basket Icon</string>
-    <string name="content_desc_ic_brownie">Brownie Icon</string>
-    <string name="content_desc_ic_cake">Cake Icon</string>
-    <string name="content_desc_ic_cookie">Cookie Icon</string>
-    <string name="content_desc_ic_cupcake">Cupcake Icon</string>
-    <string name="content_desc_ic_doughnut">Doughnut Icon</string>
-    <string name="content_desc_ic_list">List Icon</string>
-    <string name="content_desc_ic_pie">Pie Icon</string>
-    <string name="content_desc_ic_serving">Serving Icon</string>
+    <string name="recipe_item_recipe_icon_description">Recipe\'s Icon</string>
+    <string name="recipe_item_steps_icon_description">Recipe\'s Icon</string>
+    <string name="recipe_item_servings_icon_description">Recipe\'s Icon</string>
+    <string name="recipe_item_ingredients_icon_description">Recipe\'s Icon</string>
+    <string name="recipe_list_image_description">Recipe\'s photo</string>
+    <string name="recipe_list_arrow_description">Right Arrow Icon</string>
+
+    <string name="refresh">Refresh</string>
+
+    <string name="recipes_servings">servings</string>
+    <string name="recipes_ingredients">ingredients</string>
+    <string name="recipes_steps">steps</string>
 
     <string name="recipe_list_number">%1s.</string>
     <string name="recipe_list_ingredients">Recipe Ingredients</string>
@@ -22,9 +24,7 @@
     <string name="recipe_step_prev">Previous</string>
 
     <string name="widget_config_choose">Choose a Recipe</string>
+    <string name="widget_empty_msg">No Ingredients</string>
 
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="configure">Configure</string>
-    <string name="add_widget">Add widget</string>
 
 </resources>
